tests/toy/neg/001526_mutation.toylang
program a = { var int a : bool; } .
